<resources>
    <string name="app_name">KidsFly</string>
    <string name="dummy_toolbar_text">Name last name</string>
    <string name="home">Home</string>
    <string name="exit">Exit</string>
    <string name="account_settings">Account Settings</string>
    <string name="sign_out">Sign Out</string>

    <string name="past_trips_dummy">Past Trips</string>
    <string name="account_settings_dummy">Account Settings</string>
    <string name="sign_out_dummy">Sign Out</string>
    <string name="current_trips">Current Trips</string>
    <string name="current_trips_dummy">Current Trips</string>
    <string name="default_name">Default name</string>
    <string name="plus">+</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_airports">Search for airports</string>
    <string name="number_of_passengers">Number of passengers:</string>
    <string name="number_of_children">Number of children:</string>
    <string name="additional_requests">Additional requests</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="type_of_luggage">Type of luggage:</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="username">Username</string>
    <string name="alert_staff">Alert Staff!</string>
    <string name="date_of_trip">Date of Trip</string>
    <string name="airport_name">Airport Name</string>
    <string name="enter_airport_code">Enter Airport Code</string>
    <string name="travel_information">Travel Information</string>
    <string name="next">next</string>
    <string name="of_children"># of Children</string>
    <string name="of_passengers"># of Passengers</string>
    <string name="luggage_information">Luggage Information</string>
    <string name="previous">Previous</string>
    <string name="past_trips">Past Trips</string>
</resources>
