<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners"
    android:padding="15dp">

    <Button
        android:id="@+id/btn_cancel"
        android:background="@drawable/baseline_close_black_18dp"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="360dp"/>

    <TextView
        android:text="@string/travel_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="#fff"
        android:textSize="24sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_num_passengers"
            android:text="@string/of_passengers"
            style="@style/tvTripForm"
            android:paddingTop="20dp"
            android:paddingStart="25dp"/>

        <EditText
            android:id="@+id/et_num_passengers"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_num_passengers"
            android:layout_marginStart="37dp"/>

        <TextView
            android:id="@+id/tv_luggage"
            style="@style/tvTripForm"
            android:text="@string/luggage_information"
            android:layout_toRightOf="@id/tv_num_passengers"
            android:paddingTop="20dp"
            android:paddingStart="70dp"/>

        <EditText
            android:id="@+id/et_luggage"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_luggage"
            android:layout_toRightOf="@id/et_num_passengers"
            android:layout_marginStart="95dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_num_children"
            android:text="@string/of_children"
            style="@style/tvTripForm"
            android:paddingTop="20dp"
            android:paddingStart="30dp"/>

        <EditText
            android:id="@+id/et_num_children"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_num_children"
            android:layout_marginStart="30dp"/>

        <EditText
            android:layout_width="130dp"
            android:layout_height="95dp"
            android:layout_toRightOf="@id/tv_num_children"
            android:layout_marginStart="80dp"
            android:hint="Additional Requests"
            android:textColorHint="#D3D3D3"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/btn_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="65dp"
            android:layout_marginTop="20dp"
            android:text="@string/previous"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/btn_previous"
            android:layout_marginTop="20dp"
            android:text="@string/submit"/>

    </RelativeLayout>

</LinearLayout>